deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abdu-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: html-sample-app
  template:
    metadata:
      labels:
        app: html-sample-app
    spec:
      containers:
      - name: html-sample-app
        image: gcr.io/sadaindia-tvm-poc-de/abdu-image:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: html-sample-app-service
spec:
  selector:
    app: html-sample-app
  ports:
  - name: https
    port: 443
    targetPort: 80
  type: ClusterIP
