ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "html-sample-app-ingress"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: "html-sample-app-cert"
spec:
  defaultBackend:
    service:
      name: "html-sample-app-service"
      port:
        number: 443
status:
  loadBalancer: {}



   # deploy ingress resource to GKE
- name: "gcr.io/cloud-builders/kubectl"
  args:
  - apply
  - -f
  - ingress.yaml
  - --namespace=default
  - --kubeconfig=/workspace/.kube/config
